<resources>
    <string name="app_name">Needz</string>
    <string name="txt_convication">Have you ever been convicted for a non - traffic related offence under any legal jurisdiction internal or external to the Commonwealth of Australia, whereby the conviction is more than ten (10 ) years old (or five years for juvenile offences) and a sentence was imposed</string>
    <string name="do_you_consent_to_mips_conducting_inquiries_in_relation_to_your_background_and_conducting_a_state_and_or_federal_police_records_check">Do you consent to MIPS conducting inquiries in relation to your background and conducting a State and/or Federal Police records check?</string>
    <string name="txt_back_check">CI hereby authorise MIPS to conduct inquiries into my background and to acquire information and/or copies of records on my behalf, from the Australian Federal Police, or other relevant Australian police force(s) in relation to traffic violations, and criminal and/or traffic records relating to me pending before a Court and/or details of convictions or findings of guilt which have been recorded against me and which are not covered by Part VIIC of the Crimes Act 1914 dealing with spent convictions.</string>
    <string name="health_heading_1">Are you aware of any circumstances regarding your health or capacity to work that would interfere with your ability to perform the duties of the position? i(f yes, what adjustments do you need to perform the genuine and reasonable requirements of the employment (if any)?</string>
    <string name="do_you_have_an_existing_injury_or_condition_or_pre_existing_injury_or_condition_that_could_be_affected_by_the_nature_of_the_proposed_employment_existing_is_a_condition_for_which_treatment_is_still_being_received_pre_existing_is_where_an_injury_or_condition_s_is_present_but_treatment_is_not_required_if_yes_please_provide_details_of_the_injury_or_condition_s_if_yes_what_adjustments_do_you_need_to_perform_the_genuine_and_reasonable_requirements_of_the_employment_if_any">Do you have an existing injury or condition or pre-existing injury or condition that could be affected by the nature of the proposed employment? (Existing is a condition for which treatment is still being received. Pre-existing is where an injury or condition/s is present but treatment is not required. If yes please provide details of the injury or condition(s). If yes, what adjustments do you need to perform the genuine and reasonable requirements of the employment (if any)</string>
    <string name="educations_occupational_licences"><![CDATA[Educations & Occupational Licences]]></string>
    <string name="action_settings">Setting</string>
    <string name="title_activity_veiwprofile">VeiwprofileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="to_store_profile_picture_and_n_chat_records">To store profile picture and\n chat records</string>
    <string name="local_storage">Local Storage</string>
    <string name="confirm">Confirm</string>
    <string name="for_recommending_delivery_agents_around_you">For recommending Delivery Agents around you</string>
    <string name="location">Location</string>
    <string name="we_need_approval_for_access_in_order_for_you_to_start_socializing">We need approval for access in order for you to start socializing</string>
    <string name="allow_permission">Allow Permission</string>
</resources>
